<resources>
    <string name="app_name">RFID Sample</string>
    <string name="app_name_demo">RFID Sample</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="rfid_connect_request">RFID Read is not Connected.\n Would you like to connect it now?(If you want to quit, please click the "Cancel" button.)</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="ok">OK</string>
    <string name="apply">Apply</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="select_interval">Select Interval</string>
    <string name="unknown">UnKnown</string>
    <string name="string_splash_main_name">RFID Sample</string>
    <string name="string_splash_sub_name"></string>
    <string name="string_splash_company_name">"POINT MOBILE Co.,LTD"</string>
    <string name="updating">Updating...</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="bluetooth_on">Bluetooth on</string>
    <string name="version">Version</string>
    <string name="connection">Connection</string>
    <string name="device_information">RFID Reader Settings</string>
    <string name="rfid_settings">Configuration</string>
    <string name="rfid_wedge">Wedge</string>
    <string name="launcher_rfid_demo">Launch RFID Demo</string>
    <string name="launcher_rfid_control">Launch RFID Control</string>
    <string name="about">About</string>
    <string name="app_info">RFID Reader Information</string>
    <string name="demo_settings">Demo Settings</string>
    <string name="nav_title">RFID Reader Solution</string>
    <string name="app_version">%1$s</string>
    <string name="demo_tag_info">RFID Tag Info</string>
    <string name="continuous_read">Continuous Read</string>
    <string name="save_log">Save Log</string>
    <string name="auto_scan">Auto Read</string>
    <string name="beep_sound">Beep Sound</string>
    <string name="temp">Temperature option</string>
    <string name="temp_fail">Failed obtain temperature.</string>
    <string name="read_rfid_tag">Start Inventory</string>
    <string name="stop_rfid_tag">Stop RFID Tag</string>
    <string name="write_tag">Write Tag</string>
    <string name="read_tag">Read Tag</string>
    <string name="lock_tag">Lock Tag</string>
    <string name="unlock_tag">Unlock Tag</string>
    <string name="current_tag_id">Current tag id</string>
    <string name="tag_id_to_write">Tag id to write</string>
    <string name="write_success">Write Success.</string>
    <string name="write_fail">Write Fail.</string>
    <string name="read_success">Read Success.</string>
    <string name="read_fail">Read Fail.</string>
    <string name="lock_success">Lock Success.</string>
    <string name="lock_fail">Lock Fail.</string>
    <string name="unlock_success">Unlock Success.</string>
    <string name="unlock_fail">Unlock Fail.</string>
    <string name="bluetooth">Bluetooth on</string>
    <string name="search_reader">Search RFID Reader</string>
    <string name="reader">Reader</string>
    <string name="bluetooth_noti">Bluetooth On</string>
    <string name="open_option">Open option : </string>
    <string name="error_result">Err. %1$d</string>
    <string name="error_null">Err. null</string>
    <string name="error_non_string">Err. ""</string>
    <string name="continuous_read_toggle">Continuous Read</string>
    <string name="auto_scan_toggle">Auto Read</string>
    <string name="save_log_toggle">Save Log Toggle</string>
    <string name="os_version">RFID Reader OS Version</string>
    <string name="fw_version">RFID Reader BT F/W Version</string>
    <string name="beep_volume">Beep Volume</string>
    <string name="vibrator">Vibrator</string>
    <string name="battery_life">RFID Reader Battery Health</string>
    <string name="battery_level">RFID Reader Battery Level</string>
    <string name="battery_status">RFID Reader Battery Status</string>
    <string name="radio_power">Radio Power</string>
    <string name="radio_power_value">Radio power : %d dBm</string>
    <string name="tx_power_value">%d (%ddBm)</string>
    <string name="tx_cycle">Tx Cycle</string>
    <string name="result_type">Result Type</string>
    <string name="terminator">Terminator</string>
    <string name="prefix">Prefix</string>
    <string name="suffix">Suffix</string>
    <string name="advanced">Advanced</string>
    <string name="session">Session</string>
    <string name="session_value">Session : </string>
    <string name="q">Q</string>
    <string name="q_value">Q : </string>
    <string name="target">Target</string>
    <string name="inventory_config">Inventory Config</string>
    <string name="inventory_mode">Inventory Mode</string>
    <string name="inventory_timeout">Inventory Timeout</string>
    <string name="report_time">Report Time</string>
    <string name="report_time_value">Report Time : </string>
    <string name="report_rssi">Report RSSI</string>
    <string name="report_rssi_value">Report Rssi : </string>
    <string name="tag_focus">Tag Focus</string>
    <string name="fast_id">Fast ID</string>
    <string name="save_tag_list_to_csv">Save tag list to csv</string>
    <string name="default_setting">Reset RFID Setting</string>
    <string name="default_description">RFID Setting will reset to default settings</string>
    <string name="auto_read_interval">Auto read interval(sec)</string>
    <string name="filter_duplicate_tags">Filter duplicate tags</string>
    <string name="tagPattern_hexadecimal">You can only enter Hexadecimal for Tag Pattern</string>
    <string name="reader_fw_version">RFID Reader F/W Version</string>
    <string name="device_name">RFID Reader Serial Number</string>
    <string name="device_mac">RFID Reader Mac Address</string>
    <string name="bluetooth_enable">Bluetooth enabled.</string>
    <string name="bluetooth_disable">Bluetooth disabled.</string>
    <string name="bluetooth_already_connected">Bluetooth is already connected with this reader</string>
    <string name="scanner_mode">UHF RFID reader is configured to the Scanner Mode. Switch to the UHF RFID Reader Mode firstly.</string>
    <string name="load_default">Reset RFID Setting to default?</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="mute">Mute</string>
    <string name="result_callback">Callback(User Message)</string>
    <string name="result_keyboard">Keyboard Event</string>
    <string name="result_clipboard_keycode">Clipboard (KEYCODE_PASTE)</string>
    <string name="result_clipboard_ctrl_v">Clipboard (Ctrl+V)</string>
    <string name="result_intent">Intent Broadcast</string>
    <string name="result_custom_intent">Custom Intent</string>
    <string name="custom_intent_action">Intent action</string>
    <string name="custom_intent_category">Intent category</string>
    <string name="custom_intent_data">Extra data</string>
    <string name="terminator_none">None</string>
    <string name="terminator_space">Space</string>
    <string name="terminator_tab">Tab</string>
    <string name="terminator_lf">LF</string>
    <string name="terminator_tab_lf">Tab &amp; LF</string>
    <string name="good">Good</string>
    <string name="replace_need">Replacement is necessary</string>
    <string name="charging">Charging</string>
    <string name="not_charging">Not Charging</string>
    <string name="inventory_param">Inventory Param</string>
    <string name="inventory_report_format">Inventory Report Format</string>
    <string name="inventory_operation_mode">Operation Mode</string>
    <string name="inventory_timeout_warning">You can only enter 0 to 120 min</string>
    <string name="flag">Flag</string>
    <string name="flag_value">Flag : </string>
    <string name="single">Mode</string>
    <string name="single_value">Mode : </string>
    <string name="select">Select</string>
    <string name="select_value">Select : </string>
    <string name="timeout">Timeout</string>
    <string name="timeout_value">Timeout : </string>
    <string name="continuous_moe">Continuous Mode</string>
    <string name="single_mode">Single Mode</string>
    <string name="non_select_moe">Non Select Mode</string>
    <string name="exclusion_mode">Exclusion Mode</string>
    <string name="select_mode">Select Mode</string>
    <string name="time_0_des">0 means infinite ( Available from 1 to 120 min )</string>
    <string name="time_unit">Min</string>
    <string name="txcycle_on_desc">Available from 40 to 400</string>
    <string name="txcycle_off_desc">Available from 0 to 255</string>
    <string name="current_txcycle">Current Tx Cycle : \t</string>
    <string name="tx_on_duration">Tx ON duration : \t</string>
    <string name="tx_off_duration">Tx OFF duration : \t</string>
    <string name="tx_data_format_title">Tx Data Format </string>
    <string-array name="data_format">
        <item>@string/pc_epc_crc</item>
        <item>@string/pc_epc</item>
        <item>@string/epc_crc</item>
        <item>@string/epc_only</item>
    </string-array>
    <string name="filter">Filter</string>
    <string name="filter1">Filter1</string>
    <string name="filter2">Filter2</string>
    <string name="connect_dlg_title">Connect to RFID Reader</string>
    <string name="connect_dlg_msg">Do you want to connect to the device?</string>
    <string name="connect">Connect</string>
    <string name="request_disconnect">RFIDReader has connected. Do you want to disconnect it first?</string>
    <string name="not_connected">Please make a connection with RFID Reader first</string>
    <string name="search_bt_devices">Searching for devices. Please wait.</string>
    <string name="connect_request_msg">Device Connect : </string>
    <string name="disconnect_request_msg">Device Disconnect : </string>
    <string name="please_wait">Please wait..</string>
    <string name="rfid_opening">RFID Open</string>
    <string name="rfid_closing">RFID Close</string>
    <string name="disconnect_title">Disconnect to device</string>
    <string name="disconnect_msg">Do you want to disconnect to the device ? \n(MAC : %s )</string>
    <string name="disconnect">Disconnect</string>
    <string name="last_connect_device">Last Connected RFID Reader</string>
    <string name="tag_data">TAG_DATA</string>
    <string name="prefix_tag_data">PREFIX_TAG_DATA</string>
    <string name="tag_data_suffix">TAG_DATA_SUFFIX</string>
    <string name="prefix_tag_data_suffix">PREFIX_TAG_DATA_SUFFIX</string>
    <string name="no_prefix">NO_PREFIX</string>
    <string name="no_suffix">NO_SUFFIX</string>
    <string name="pc_epc_crc">PC_EPC_CRC</string>
    <string name="pc_epc">PC_EPC</string>
    <string name="epc_crc">EPC_CRC</string>
    <string name="epc_only">EPC_ONLY</string>
    <string name="single_search">Single Search</string>
    <string name="tag_tooltip">Input Tag (No CRC Code)</string>
    <string name="btn_init_log">Clear Log</string>
    <string name="threshold">Threshold : </string>
    <string name="step">Step : </string>
    <string name="threshold_range">3~29</string>
    <string name="step_range">3~6</string>
    <string name="multi_search">Multi Search</string>
    <string name="multi_search_setting">Multi Search Settings</string>
    <string name="clear_all">Clear All</string>
    <string name="request_apply_before_leave">(To apply the entered tag id, be sure to click the apply button before leaving this page.)</string>
</resources>