<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/rel_single_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/et_single_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tag_tooltip"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/threshold"/>

                    <EditText
                        android:id="@+id/et_threshold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/threshold_range"
                        android:text="3"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/step"/>

                    <EditText
                        android:id="@+id/et_step"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/step_range"
                        android:text="3"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_single_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/single_search" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/sv_log"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_clear_log"
            android:layout_below="@+id/linear_input"
            android:layout_margin="10dp"
            android:background="@color/col_80e0e0e0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_log"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true" />

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/btn_clear_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/btn_init_log" />

    </RelativeLayout>

</LinearLayout>